--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h1{
     float:left
 }
 #taula1 table,tr,th,td{
-    border: 1px solid red;
+    border: 1px solid black;
     border-collapse: collapse;
     background: oldlace;
 }
