--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,28 @@ h1{
 }
 #menu ul{
     list-style: none;
+    
 }
 
 #menu ul li{
-    float:left
+    float:left;
+    text-decoration: none;
+}
+a {
+    text-decoration: none;
+
 }
 #taula1 table,tr,th,td{
     border: 1px solid black;
     border-collapse: collapse;
     background: oldlace;
+    font-family: 'Sansita Swashed', cursive;
+}
+
+.foot{
+    vertical-align: top;
+    text-align: center;
+    display: inline;
+    padding: 50px;
+    width: 100%;
 }
